--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -13,3 +13,11 @@ command="pwsh"
 [diff]
     pager="delta"
 
+[merge]
+    command = "nvim"
+    args = [
+        "-d", 
+        "{{ "{{ .Destination }}" }}",
+        "{{ "{{ .Source }}" }}",
+        "{{ "{{ .Target }}" }}"
+    ]
