feat: add 'venv' alias to activate python venvs

--- a/Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
+++ b/Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
@@ -27,4 +27,6 @@ $fzf_functions = Join-Path -Path $PSScriptRoot -ChildPath "FzFCustomFunctions.ps
 . $fzf_functions
 $exports = Join-Path -Path $PSScriptRoot -ChildPath "exports.ps1"
 . $exports
+$aliases = Join-Path -Path $PSScriptRoot -ChildPath "aliases.ps1"
+. $aliases
 
