feat(profile): add completions for wezterm and chezmoi
Added a new completions.ps1 script to load shell completions for
wezterm and chezmoi in the PowerShell profile. This ensures that
command-line completions are available for these tools, improving
usability and efficiency.

--- a/Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
+++ b/Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
@@ -22,6 +22,8 @@ $exports = Join-Path -Path $PSScriptRoot -ChildPath "exports.ps1"
 . $exports
 $aliases = Join-Path -Path $PSScriptRoot -ChildPath "aliases.ps1"
 . $aliases
+$completions = Join-Path -Path $PSScriptRoot -ChildPath "completions.ps1"
+. $completions
 
 Invoke-Expression (& { (zoxide init powershell | Out-String) })
 Invoke-Expression (&starship init powershell)
