--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,13 +1,5 @@
 export XDG_CONFIG_HOME="$HOME/.config"
 
-# oh-my-zsh-related
-# Path to your oh-my-zsh installation.
-export ZSH="$HOME/.oh-my-zsh"
-zstyle ':omz:update' mode reminder  # just remind me to update when it's time
-zstyle ':omz:update' frequency 13
-plugins=(git)
-source $ZSH/oh-my-zsh.sh
-
 # Enable vim mode in zsh
 bindkey -v
 
@@ -16,6 +8,7 @@ bindkey -v
 plug "zsh-users/zsh-autosuggestions"
 plug "zap-zsh/supercharge"
 plug "zsh-users/zsh-syntax-highlighting"
+plug "chivalryq/git-alias"
 
 {{ if ne .chezmoi.os "darwin" }}
 # everything installed with brew should come after this
